Bug 277170 - filters are wiped if the Akonadi server is not started before running kmail
Summary: filters are wiped if the Akonadi server is not started before running kmail
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: filtering (other bugs)
Version First Reported In: Git (master)
Platform: Compiled Sources Linux
: NOR critical
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords: release_blocker
: 279244 (view as bug list)
Depends on:
Blocks: 270261
  Show dependency treegraph
 
Reported: 2011-07-05 23:59 UTC by Christophe Marin
Modified: 2011-09-16 22:32 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Christophe Marin 2011-07-05 23:59:12 UTC
Using master,

The issue can be reproduced under certain conditions:

- akonadictl stop
- once stopped, run KMail.

Result: the KMail filters are deleted from kmail2rc
Comment 1 Ilya Hegai 2011-07-15 07:41:42 UTC
Same to me.
Comment 2 Christophe Marin 2011-08-03 10:02:06 UTC
*** Bug 279244 has been marked as a duplicate of this bug. ***
Comment 3 Christophe Marin 2011-08-03 10:04:23 UTC
From bug 279244:

"Frequently, when I start kmail, all of my filter rules are gone (also kmail
forgets which accounts and folders and I had expanded on the left-hand side and
they're all collapsed)"
Comment 4 Christian Trippe 2011-08-11 10:28:03 UTC
Just happened to me using kmail2 from KDE 4.7.0. However only the filters were removed which where set to only apply for a special account.
Comment 5 Tobias Koenig 2011-09-16 20:58:23 UTC
Hej,

this should be fixed by http://quickgit.kde.org/?p=kdepim.git&a=commit&h=b9a9273edc278c849fe2aff97907acb96127bc2f in master. Can somebody try whether it is really fixed, please?
I couldn't reproduce it here but am pretty sure to have found the problem.

Ciao,
Tobias
Comment 6 Christophe Marin 2011-09-16 22:32:12 UTC
Indeed, fixed in master.