Prevent possible loose of filters if Akonadi is not running

BUG: 277170